FINISHED STYLING THE PAGE USING CARDS

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Feel free to explore the links in the navigation bar.</p>
         </section>
 
-        <section id="Contact">
+        <section id="contact">
             <h2>Contact Information</h2>
             <p>If you have any questions, please reach out via email at <a href="mailto:erick.wambugu23@gmail.com"> erick.wambugu23@gmail.com </a>.</p>
             <p>Follow me on social media for updates.</p>
